2005-12-24 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b58

 * Fix: Step 3 in Config was little bit broken.
   Thanks to Kai.

 * Change: Updated Manifest.

2005-12-23 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b57

 * Change: Added display of creation date in albums.php

 * Change: Wording in register.php

 * New: Added method getCreationDate() in classes/Album.php

 * Change: length for email and fullname field in html/userData.inc

 * Change: change of bars002 skin.

2005-12-19 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b56

 * Change: Some css in config.php

 * Fix: Disabled "Show the add vote link" in stats-wizard,
        as this functionality is not implemented yet.

 * Fix: removed redundant function galleryImage()

 * Change: simplified form_choice(); lib/setup.php

 * Fix: Some HTML fixes in config wizard.

 * New: Show h0bbel(legend) for status appearing in step1 check page.

 * New: Added Js to switch graphictoolkit settings.

2005-12-19 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b55

 * Fix: Thumbnail in Successmessage for eCards got lost.

 * Fix: Remove commentspam blacklist entries was broken.

 Thanks to Kai for catching this.

2005-12-18 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b54

 * Change forgot to commit new icon images.

2005-12-17 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b53

 * Change: Code and html nicify.

 * Fix: Button value in move_photo.

2005-12-17 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b52

 * Change: refactored printChildren and printMicrochilder
	   o Added nice tree pics (ready for rtl)
	   o Created function createTreeArray

 * Fix: Removed debugmessag in save_photos.php

 * Fix: Use gTranslate as some places in classes/Album.php

 * Change: Reword metadataOnUpload help messag.
	   Thanks to Christian "H0bbel" Mohn.

 * Change: Nicified add_form.inc

 * Fix: removed add_admin.inc from list of translateable files.

2005-12-15 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b51

 * New: Added help for metadata on upload.

 * Fix: Metadata on upload.
